--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,12 +20,12 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
-          {% if site.show_downloads %}
-            <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
-            <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
-            <li class="title">DOWNLOADS</li>
-          {% endif %}
+          <a href="/">Home</a>
+          <a href="/Verses/">Verses</a>
+          <a href="/Research/">Research</a>
+          <a href="/Paintings/">Paintings</a>
+          <a href="/Knowledge/">Knowledge</a>
+          <a href="/CO/">CO</a>
         </nav>
       </div><!-- end header -->
 
