--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,11 +21,11 @@
       <div id="header">
         <nav>
           <a href="/">Home</a>
-          <a href="/Verses/">Verses</a>
-          <a href="/Research/">Research</a>
-          <a href="/Paintings/">Paintings</a>
-          <a href="/Knowledge/">Knowledge</a>
-          <a href="/CO/">CO</a>
+          <a href="/Religion/">Religion</a>
+          <a href="/Pure_Math_Research/">Pure Mathematics Research</a>
+          <a href="/Cyber_Security/">Cyber Security</a>
+          <a href="/The_Blend/">The Blend</a>
+          <a href="/CO/">My Creative Outlets</a>
         </nav>
       </div><!-- end header -->
 
