--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,11 @@
       <div id="header">
         <nav>
           <a href="/">Home</a>
-          <a href="/Religion/">Religion</a>
-          <a href="/Pure_Math_Research/">Pure Mathematics Research</a>
-          <a href="/Cyber_Security/">Cyber Security</a>
-          <a href="/The_Blend/">The Blend</a>
-          <a href="/CO/">My Creative Outlets</a>
+          <a href="/Religion">eligion</a>
+          <a href="/Pure_Math_Research">Pure Mathematics Research</a>
+          <a href="/Cyber_Security">Cyber Security</a>
+          <a href="/The_Blend">The Blend</a>
+          <a href="/CO">My Creative Outlets</a>
         </nav>
       </div><!-- end header -->
 
