--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       <div id="header">
         <nav>
           <a href="/">Home</a>
-          <a href="/Religion">Religion</a>
+          <a href="/Religion.md">Reigion</a>
           <a href="/Pure_Math_Research">PureMathematicsResearch</a>
           <a href="/Cyber_Security">CyberSecurity</a>
           <a href="/The_Blend">TheBlend</a>
