--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,9 +23,9 @@
         <nav>
           <a href="/">Home</a>
           <a href="/Religion/">Reigion</a>
-          <a href="/Pure_Math_Research/">PureMathematicsResearch</a>
-          <a href="/Cyber_Security/">CyberSecurity</a>
-          <a href="/The_Blend/">TheBlend</a>
+          <a href="/PureMathResearch/">PureMathematicsResearch</a>
+          <a href="/CyberSecurity/">CyberSecurity</a>
+          <a href="/TheBlend/">TheBlend</a>
           <a href="/CO/">MyCreativeOutlets</a>
         </nav>
       </div><!-- end header -->
