--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       <div id="header">
         <nav>
           <a href="/">Home</a>
-          <a href="/Religion/">Reigion</a>
+          <a href="/Verses/">Reigion</a>
           <a href="/PureMathResearch/">PureMathematicsResearch</a>
           <a href="/CyberSecurity/">CyberSecurity</a>
           <a href="/TheBlend/">TheBlend</a>
