--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,9 @@
           <a href="/">Home</a>
           <a href="/Verses/">Reigion</a>
           <a href="/PureMathResearch/">PureMathematicsResearch</a>
-          <a href="/CyberSecurity/">CyberSecurity</a>
-          <a href="/TheBlend/">TheBlend</a>
-          <a href="/CO/">MyCreativeOutlets</a>
+          <a href="/Cyber">CyberSecurity</a>
+          <a href="/Blender/">TheBlend</a>
+          <a href="/CreativeOutlet/">MyCreativeOutlets</a>
         </nav>
       </div><!-- end header -->
 
