--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+                              <nav> 
+            <a href="/">Home</a>
+            <a href="/Verses/">Reigion</a>
+            <a href="/PureMathResearch/">PureMathematicsResearch</a>
+            <a href="/Cyber">CyberSecurity</a>
+            <a href="/Blender/">TheBlend</a>
+            <a href="/CreativeOutlet/">MyCreativeOutlets</a>
+          </nav>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         </header>
