--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <header class="inner">
           <nav> 
             <a href="/">Home</a>
-            <a href="/Verses/">Reigion</a>
+            <a href="/Verses/">Religion</a>
             <a href="/PureMathResearch/">PureMathematicsResearch</a>
             <a href="/Cyber">CyberSecurity</a>
             <a href="/Blender/">TheBlend</a>
