--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
                   <a class="nav-link" href="/Verses/">Religion <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/PureMathResearch/">Pure Mathematics Research/a>
+                  <a class="nav-link" href="/PureMathResearch/">Pure Mathematics Research</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/Cyber/">Cyber Security Research</a>
