--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/Verses/">Religion <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/Verses/">Religion</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/PureMathResearch/">Pure Mathematics Research</a>
