--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="/Verses/">Religion</a>
                 </li>
                 <li class="nav-item">
