--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,33 +15,35 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">Home</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <a class="nav-link" href="/Verses/">Religion</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/PureMathResearch/">Pure Mathematics Research</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/Cyber/">Cyber Security Research</a>
-                </li>
-                 <li class="nav-item">
-                  <a class="nav-link" href="/Blender/">The Blend</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/CreativeOutlet/">Cretive Outlets</a>
-                </li>
-              </ul>
-              <span class="navbar-text">
-              </span>
-            </div>
+          <!-- A grey horizontal navbar that becomes vertical on small screens -->
+          <nav class="navbar navbar-expand-sm bg-light">
+
+            <!-- Links -->
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="/">Home</a>
+              </li>
+                  <li class="nav-item">
+                <a class="nav-link" href="/About/">About Me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/Verses/">Religion</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/PureMathResearch/">Pure Mathematics Research</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/Cyber/">Cyber Security Research</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/Blender/">The Crossover</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/CreativeOutlet/">Creative Outlet</a>
+              </li>
+            </ul>
           </nav>
+          
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         </header>
