--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,14 +18,14 @@
           <!-- As a link -->
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/Verses">Navbar</a>
+    <a class="navbar-brand" href="/Verses/">Nav</a>
   </div>
 </nav>
 
 <!-- As a heading -->
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <span class="navbar-brand mb-0 h1">Navbar</span>
+    <span class="navbar-brand mb-0 h1">jNavbar</span>
   </div>
 </nav>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
