--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,11 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="/Verses/">Nav</a>
-    <a class="navbar-brand" href="/Cyber/">Nawv</a>
+   
   </div>
-</nav>
-
-<!-- As a heading -->
-<nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <span class="navbar-brand mb-0 h1">jNavbar</span>
+    <a class="navbar-brand" href="/Cyber/">Nav</a>
+   
   </div>
 </nav>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
