--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,22 @@
    
   </div>
   <div class="container-fluid">
-    <a class="navbar-brand" href="/Cyber/">Nav</a>
+    <a class="navbar-brand" href="/Cyber/">Nav1</a>
+   
+  </div>
+    <div class="container-fluid">
+    <a class="navbar-brand" href="/Cyber/">Navq1</a>
+   
+  </div>
+    <div class="container-fluid">
+    <a class="navbar-brand" href="/Cyber/">Navqw1</a>
+   
+  </div>  <div class="container-fluid">
+    <a class="navbar-brand" href="/Cyber/">Nfav1</a>
+   
+  </div>
+    <div class="container-fluid">
+    <a class="navbar-brand" href="/Cyber/">Navh1</a>
    
   </div>
 </nav>
