--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,32 +15,27 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <!-- As a link -->
-<nav class="navbar navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/Verses/">Nav</a>
-   
+         <p>
+  <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both elements</button>
+</p>
+<div class="row">
+  <div class="col">
+    <div class="collapse multi-collapse" id="multiCollapseExample1">
+      <div class="card card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+      </div>
+    </div>
   </div>
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/Cyber/">Nav1</a>
-   
+  <div class="col">
+    <div class="collapse multi-collapse" id="multiCollapseExample2">
+      <div class="card card-body">
+        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+      </div>
+    </div>
   </div>
-    <div class="container-fluid">
-    <a class="navbar-brand" href="/Cyber/">Navq1</a>
-   
-  </div>
-    <div class="container-fluid">
-    <a class="navbar-brand" href="/Cyber/">Navqw1</a>
-   
-  </div>  <div class="container-fluid">
-    <a class="navbar-brand" href="/Cyber/">Nfav1</a>
-   
-  </div>
-    <div class="container-fluid">
-    <a class="navbar-brand" href="/Cyber/">Navh1</a>
-   
-  </div>
-</nav>
+</div>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         </header>
