--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
         <header class="inner">
          <p>
   <a class="btn btn-primary" data-toggle="collapse" href="/" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Home</a>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="/About/" aria-expanded="false" aria-controls="multiCollapseExample2">About Me</button>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="/Verses" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Religion</button>
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#About" aria-expanded="false" aria-controls="multiCollapseExample2">About Me</button>
+  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#Verses" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Religion</button>
 </p>
 <div class="row">
   <div class="col">
