--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,25 +15,28 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-         <p>
-  <a class="btn btn-primary" data-toggle="collapse" href="/" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Home</a>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#About" aria-expanded="false" aria-controls="multiCollapseExample2">About Me</button>
-  <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#Verses" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Religion</button>
-</p>
-<div class="row">
-  <div class="col">
-    <div class="collapse multi-collapse" id="multiCollapseExample1">
-      <div class="card card-body">
-        
-  </div>
-  <div class="col">
-    <div class="collapse multi-collapse" id="multiCollapseExample2">
-      <div class="card card-body">
-    
-      </div>
-    </div>
-  </div>
-</div>
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="/" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Home</a>
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both elements</button>
+          </p>
+          <div class="row">
+            <div class="col">
+              <div class="collapse multi-collapse" id="multiCollapseExample1">
+                <div class="card card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="collapse multi-collapse" id="multiCollapseExample2">
+                <div class="card card-body">
+                  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                </div>
+              </div>
+            </div>
+          </div>
+          
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         </header>
