--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <header class="inner">
           <p>
             <a class="btn btn-primary" data-toggle="collapse" href="/" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Home</a>
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="/Verses/" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both elements</button>
           </p>
           <div class="row">
