--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,10 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-   <div class="btn-group">
-  <a href="/" class="btn btn-primary active" aria-current="page">Active dlink</a>
-  <a href="/Verses/" class="btn btn-primary">Linkg</a>
-  <a href="/Cyber/" class="btn btn-primary">Liynk</a>
+   <div class="btn-group btn-group-lg">
+  <a href="/" class="btn btn-primary active btn btn-outline-primary" aria-current="page">Active dlink</a>
+  <a href="/Verses/" class="btn btn-primary btn btn-outline-primary">Linkg</a>
+  <a href="/Cyber/" class="btn btn-primary btn btn-outline-primary">Liynk</a>
 </div>
           
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
