--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,12 +15,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-   <div class="btn-group btn-group-lg">
-  <a href="/" class="btn btn-primary active btn btn-outline-primary" aria-current="page">Actidddve dlink</a>
-  <a href="/Verses/" class="btn btn-primary btn btn-outline-primary">Linkdddg</a>
-  <a href="/Cyber/" class="btn btn-primary btn btn-outline-primary">Liydddnk</a>
-</div>
-          
+<!-- As a link -->
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="/_css/.accordian-body" href="/">Home</a>
+  </div>
+    <div class="container-fluid">
+    <a class="/_css/.accordian-body" href="/Verses/">Fdw</a>
+  </div>
+</nav>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         </header>
