--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,9 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="/_css/.accordian-body" href="/">Home</a>
+        <a class="/_css/.accordian-body" href="/Verses">Hodd</a>
   </div>
-    <div class="container-fluid">
-    <a class="/_css/.accordian-body" href="/Verses/">Fdw</a>
-  </div>
+
 </nav>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
