--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,12 +14,16 @@
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
-        <header class="inner">
+        <header class="inner /_css/.accordian-body">
 <!-- As a link -->
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <a class="/_css/.accordian-body" href="/">Home</a>
-        <a class="/_css/.accordian-body" href="/Verses">Hodd</a>
+
+  </div>
+    <div class="container-fluid">
+    <a class="/_css/.accordian-body" href="/Verses">Hodffme</a>
+
   </div>
 
 </nav>
