--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,19 +14,31 @@
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
-        <header class="inner /_css/.accordian-body">
-<!-- As a link -->
-<nav class="navbar navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="/_css/.accordian-body" href="/">Home</a>
-
-  </div>
-    <div class="container-fluid">
-    <a class="/_css/.accordian-body" href="/Verses">Hodffme</a>
-
-  </div>
-
-</nav>
+        <header class="inner">
+          <!-- As a link -->
+          <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/">Home</a>
+            </div>
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/About/">About Me</a>
+            </div>
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/Verses/">Religion</a>
+            </div>
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/PureMathResearch/">Pure Mathematics Research</a>
+            </div>
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/Cyber/">Cyber Security Research</a>
+            </div>
+            <div class="container-fluid">
+              <a class="navbar-brand" href="Blender/">The Crossover</a>
+            </div>
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/CO/">Creative Outlets</a>
+            </div>
+          </nav>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         </header>
