--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
               <a class="navbar-brand" href="Blender/">The Crossover</a>
             </div>
             <div class="container-fluid">
-              <a class="navbar-brand" href="/CO/">Creative Outlets</a>
+              <a class="navbar-brand" href="/CO/">My Creative Outlets</a>
             </div>
           </nav>
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
