--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
               <a class="navbar-brand" href="/Cyber/">Cyber Security Research</a>
             </div>
             <div class="container-fluid">
-              <a class="navbar-brand" href="Blender/">The Crossover</a>
+              <a class="navbar-brand" href="/Blender/">The Crossover</a>
             </div>
             <div class="container-fluid">
               <a class="navbar-brand" href="/CO/">My Creative Outlets</a>
