--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,25 @@
 
 {% seo %}
   </head>
-
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/">Home</a>
+            
+           
+              <a class="navbar-brand" href="/About/">About Me</a>
+          
+          
+              <a class="navbar-brand" href="/Verses/">Religion</a>
+          
+            
+              <a class="navbar-brand" href="/PureMathResearch/">Pure Mathematics Research</a>
+           
+          
+              <a class="navbar-brand" href="/Cyber/">Cyber Security Research</a>
+            
+              <a class="navbar-brand" href="/Blender/">The Crossover</a>
+           
+              <a class="navbar-brand" href="/CreativeOutlet/">My Creative Outlets</a>
+            </div>
   <body>
 
     <header>
