--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,22 +11,10 @@
   </head>
             <div class="container-fluid">
               <a class="navbar-brand" href="/">Home</a>
-            
-           
               <a class="navbar-brand" href="/About/">About Me</a>
-          
-          
-              <a class="navbar-brand" href="/Verses/">Religion</a>
-          
-            
-              <a class="navbar-brand" href="/PureMathResearch/">Pure Mathematics Research</a>
-           
-          
-              <a class="navbar-brand" href="/Cyber/">Cyber Security Research</a>
-            
-              <a class="navbar-brand" href="/Blender/">The Crossover</a>
-           
-              <a class="navbar-brand" href="/CreativeOutlet/">My Creative Outlets</a>
+              <a class="navbar-brand" href="/Reseaarch/">My Research</a>
+              <a class="navbar-brand" href="/Hobbies/">My Hobbies</a>
+              <a class="navbar-brand" href="/Hobbies/">Resume</a>
             </div>
   <body>
 
