--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,9 @@
             <div class="container-fluid">
               <a class="navbar-brand" href="/">Home</a>
               <a class="navbar-brand" href="/About/">About Me</a>
-              <a class="navbar-brand" href="/Reseaarch/">My Research</a>
+              <a class="navbar-brand" href="/Research/">My Research</a>
               <a class="navbar-brand" href="/Hobbies/">My Hobbies</a>
-              <a class="navbar-brand" href="/Hobbies/">Resume</a>
+              <a class="navbar-brand" href="/Resume/">Resume</a>
             </div>
   <body>
 
