--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
               <a class="navbar-brand" href="/Research/">My Research</a>
               <a class="navbar-brand" href="/Hobbies/">My Hobbies</a>
               <a class="navbar-brand" href="/Resume/">Resume</a>
-              <a class="navbar-brand" href="/Poems/">Poems</a>
+              <a class="navbar-brand" href="/Poems.md/">My Poems</a>
             </div>
   <body>
 
